k8s/frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-Deployment
  namespace: prod
  labels:
    app: frontend-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
      - name: frontend-container
        image: subhankarpaul/frontend-nodejsproject:latest
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: prod
spec:
  selector:
    app: frontend-app   # ✅ Correct label
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
